--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,7 +51,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v4
       with:
-        images: zcunsoft/api
+        images: zcunsoft/accesslog-processing-simple
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -79,5 +79,5 @@ jobs:
     - name: Push image to Aliyun Docker Registry
       run: |
         docker buildx imagetools create \
-          --tag ${{ secrets.ALIYUN_REGISTRY }}/clklog/api:v4.0.0 \
-          zcunsoft/api:${{ github.ref_name }}
+          --tag ${{ secrets.ALIYUN_REGISTRY }}/clklog/accesslog-processing-simple:latest \
+          zcunsoft/accesslog-processing-simple:${{ github.ref_name }}
